[gd_scene load_steps=3 format=2]

[ext_resource path="res://机体/Boss/DemoBossSquare/Boss_Squre.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="BossSqure" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtkEndTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="AtkChangeTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Shooter" type="Node2D" parent="."]
position = Vector2( 0, 72 )

[node name="Shooter2" type="Node2D" parent="."]
position = Vector2( 0, 72 )

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 32, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -32, -64 )
shape = SubResource( 1 )

[connection signal="timeout" from="AtkEndTimer" to="." method="_on_AtkEndTimer_timeout"]
[connection signal="timeout" from="AtkChangeTimer" to="." method="_on_AtkChangeTimer_timeout"]
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
